V0.22.4 - Dashboard Searchbar Text Veritcal Alignment Fix 1

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -37,10 +37,6 @@ p.control {
 	margin-top: -15px;
 }
 
-#search {
-	padding-bottom: 10px;
-}
-
 #legend {
 	margin-right: 5px;
 	background-color: lightgrey;
